--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(myst_sample_radius)
 export(myst_sample_radius_bounded)
 export(sample_circle)
 export(sample_circle_boundedbox)
+importFrom(sf,st_coordinates)
+importFrom(sf,st_crs)
 importFrom(sf,st_distance)
 importFrom(sf,st_intersects)
 importFrom(sf,st_sample)
+importFrom(sf,st_set_crs)
