--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(sample_circle)
 export(sample_circle_boundedbox)
 export(st_sample_radius)
 export(st_sample_radius_bounded)
+export(st_sample_radius_bounded_set)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_distance)
