--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(st_sample_radius)
 export(st_sample_radius_bounded)
 export(st_sample_radius_bounded_set)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_covers)
 importFrom(sf,st_crs)
 importFrom(sf,st_distance)
 importFrom(sf,st_intersects)
+importFrom(sf,st_point)
 importFrom(sf,st_sample)
 importFrom(sf,st_set_crs)
